--- a/views/Css/cursos.css
+++ b/views/Css/cursos.css
@@ -1,24 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@500&display=swap');
 
-*{
-    margin:0;
-    padding:0;
-    box-sizing: border-box;
-}
-
-body{
-    background-color: #0a0a0a;
-}
-
-/* Portada y buscador */
-#portada{
-    width:100%;
-    height: 400px;
-    overflow:hidden;
-    position:relative;
-}
-
-.portada{
+.search{
     font-size: 18px;
     min-width:40.62rem;
     color:#fff;
@@ -27,17 +9,10 @@ body{
     display:flex;
     align-items: end;
 }
-.portada .containerPortada{
+.contentSearch{
     margin:0 auto;
 }
-.tituloPortada{
-    font-weight: 300;
-    font-size:3.12em;
-    font-family: 'Alkalami', serif;
-    text-align: justify;
-    margin-top:1.4em;
-    margin-bottom:-0.2em;
-}
+
 #buscador{
     background-color: rgb(66 66 66);
     color: #fff;
@@ -70,7 +45,7 @@ body{
 
 /* CARDS */
 .card{
-    height:250px;
+    height:270px;
     background:#000;
     border-radius:30px;
     overflow:hidden;
