--- a/views/Css/inicio.css
+++ b/views/Css/inicio.css
@@ -150,7 +150,7 @@ body{
 
 /* CARDS */
 .card{
-    height:250px;
+    height:270px;
     background:#000;
     border-radius:30px;
     overflow:hidden;
@@ -278,4 +278,30 @@ section{
     margin:10px;
     height: 27rem;
     margin-right: 40px;
+}
+
+/* Pagina Cursos - buscador */
+.search{
+    font-size: 18px;
+    min-width:40.62rem;
+    color:#fff;
+    background-position:center center;
+    background-size:cover ;
+    display:flex;
+    align-items: end;
+}
+.contentSearch{
+    margin:0 auto;
+}
+
+#buscador{
+    background-color: rgb(66 66 66);
+    color: #fff;
+    margin-top: 30px;
+    width: 1000px;
+    font-size: 20px;
+    padding: 15px;
+    border-radius: 15px;
+    margin-bottom: 20px;
+    text-align: center;
 }
