--- a/views/head.ejs
+++ b/views/head.ejs
@@ -7,9 +7,14 @@
     <title>Nova Academy</title>
     <!-- Css -->
     <link rel="stylesheet" href="Css/menu-nav.css">
-    <link rel="stylesheet" href="Css/inicio.css">
+    <link rel="stylesheet" href="Css/styles.css">
+    <link rel="stylesheet" href="Css/login.css">
+    <link rel="stylesheet" href="Css/registro.css">
     <link rel="stylesheet" href="Css/footer.css">
     <!-- Icons -->
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+   <!-- Js -->
+   <script src="Js/menu.js"></script>
 </head>
