--- a/views/inicio.ejs
+++ b/views/inicio.ejs
@@ -107,7 +107,7 @@
         </ul>
     </div>
     <!-- Informacion -->
-    <section>
+    <section id="InformacionInicio">
         <figcaption>
             <img src="Imagenes/slider1.jpg" class="imagen">
         </figcaption>
