--- a/views/Css/styles.css
+++ b/views/Css/styles.css
@@ -8,7 +8,7 @@
 }
 
 body{
-    background-color: #111;
+    background-color: #080808;
 }
 
 #portada{
@@ -230,7 +230,7 @@ body{
     color: #000;
 } 
 /* Info */
-section{
+#InformacionInicio{
     margin:20px;
     margin-top: 60px;
     margin-bottom: 60px;
@@ -304,4 +304,112 @@ section{
     border-radius: 15px;
     margin-bottom: 20px;
     text-align: center;
+}
+
+/* Pagina de Contacto */
+.content{
+    margin:50px;
+    color: #fff;
+    font-family: 'Quicksand', sans-serif;
+}
+
+.container {
+    max-width: 1170px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1.5em;
+}
+
+.contact-info ul {
+    list-style: none;
+    padding: 0;
+}
+
+.logo {
+    text-align: center;
+    font-size: 3em;
+    color:#ffffff94;
+}
+.contact-wrapper {
+    box-shadow: 0 0 20px 0 rgba(255, 255, 255, .3);
+}
+
+.contact-wrapper > * {
+    padding: 1em;
+}
+
+.contact-form {
+    background: #222222;
+}
+
+.contact-form form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.contact-form form label {
+    display: block;
+}
+
+.contact-form form p {
+    margin: 0;
+    padding: 1em;
+}
+
+.contact-form form .block {
+    grid-column: 1 / 3;
+}
+
+.contact-form form button,
+.contact-form form input,
+.contact-form form textarea {
+    width: 100%;
+    padding: .7em;
+    border: none;
+    background: none;
+    outline: 0;
+    color: #fff;
+    border-bottom: 1px solid #4ad295;
+}
+
+.contact-form form button {
+    background: #4ad295;
+    border: 0;
+    text-transform: uppercase;
+    padding: 1em;
+}
+
+.contact-form form button:hover,
+.contact-form form button:focus {
+    background: transparent;
+    border: 1px solid #4ad295;
+    color: #4ad295;
+    transition: background-color 1s ease-out;
+    outline: 0;
+}
+
+/* CONTACT INFO */
+.contact-info {
+    background: #000;
+}
+
+.contact-info h4, .contact-info ul, .contact-info p {
+    text-align: center;
+    margin: 0 0 1rem 0;
+}
+
+/* LARGE SIZE */
+@media(min-width: 900px) {
+    .contact-wrapper {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+    }
+    .contact-wrapper > * {
+        padding: 2em;
+    }
+    .contact-info h4,
+    .contact-info ul,
+    .contact-info p {
+        text-align: left;
+    }
 }
