--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,23 +1,7 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nova Academy</title>
-    <!-- Css -->
-    <link rel="stylesheet" href="Css/menu-nav.css">
-    <link rel="stylesheet" href="Css/login.css">
-    <link rel="stylesheet" href="Css/footer.css">
-    <!-- Boxicons CSS -->
-    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
-    <!-- Iconos -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-   <script src="Js/menu.js"></script>
-</head> 
-<body>
-    <!-- Menu de Navegacion -->
-    <header class="header">
+<%- include("head.ejs") %> 
+<body id="bodyLogin">
+<!-- Menu de Navegacion -->
+<header class="header">
       <div id="logo">
           <a href="/inicio"><img src="Imagenes/undraw_programming_re_kg9v.svg"></a>
       </div>
@@ -43,10 +27,11 @@
           </ul>
           
       </nav>
-  </header>
+</header>
    
-       <!-- Formulario de Registro -->
-       <section class="container forms">
+<!-- Formulario de Registro -->
+<main>
+<section id="containerForm">
          <div id="login" class="form login">
              <div class="form-content">
                  <h1 id="tituloLogin">Inicia Sesión</h1>
@@ -138,41 +123,9 @@
              </div>
 
          </div>
-     </section>
-   </main>
-   <!-- Footer -->
-   <footer id="footer" class="pie-pagina">
-    <div class="grupo-1">
-        <div class="boxFooter">
-            <figure>
-                <a href="#">
-                    <img src="Imagenes/undraw_programming_re_kg9v.svg" id="logo2">
-                </a>
-            </figure>
-        </div>
-        <div class="boxFooter">
-            <h2>SOBRE NOSOTROS</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
-        </div>
-        <div class="boxFooter">
-            <h2>SIGUENOS</h2>
-            <div class="iconos">
-              <div class="border-icon">
-                  <i class='bx bxl-instagram'></i>
-              </div>
-              <div class="border-icon">
-                <i class='bx bxl-whatsapp' ></i>
-              </div>
-              <div class="border-icon">
-                  <i class='bx bxl-facebook-circle' ></i>
-              </div>
-          </div>
-        </div>
-    </div>
-    <div class="grupo-2">
-        <small>&copy; 2022 <b>Nova Academy</b> - Todos los Derechos Reservados.</small>
-    </div>
-</footer>
-   </body>
-   </html>
+</section>
+</main>
+
+<%- include("footer.ejs") %>
+</body>
+</html>
