se realizaron pruebas en el form de iniciar sesion, aunque manda un error, aun faltan realizar varios cambios y ajustes.

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -35,13 +35,13 @@
          <div id="login" class="form login">
              <div class="form-content">
                  <h1 id="tituloLogin">Inicia Sesión</h1>
-                 <form action="#">
+                 <form method="post" action="/login">
                      <div class="field input-field">
-                         <input type="email" placeholder="Email" class="input">
+                         <input type="email" name="email" placeholder="Email" class="input">
                      </div>
 
                      <div class="field input-field">
-                         <input type="password" placeholder="Password" class="Contraseña">
+                         <input type="password" name="password" placeholder="Password" class="Contraseña">
                          <i class='bx bx-hide eye-icon'></i>
                      </div>
 
