--- a/views/registro.ejs
+++ b/views/registro.ejs
@@ -1,5 +1,5 @@
 <%- include("head.ejs") %> 
-<body>
+<body id="bodyRegistro">
     <!-- Menu de Navegacion -->
     <header class="header">
       <div id="logo">
@@ -38,11 +38,11 @@
          </div>
          <div class="input-box">
            <span class="details">Email</span>
-           <input type="text" name="email" placeholder="Escribe tu correo" required>
+           <input type="email" name="email" placeholder="Escribe tu correo" required>
          </div>
          <div class="input-box">
            <span class="details">Número de teléfono</span>
-           <input type="text" name="telefono" placeholder="Escribe tu número de teléfono" required>
+           <input type="tel" name="telefono" placeholder="Escribe tu número de teléfono" required>
          </div>
          <div class="input-box">
            <span class="details">Contraseña</span>
