--- a/views/Css/styles.css
+++ b/views/Css/styles.css
@@ -8,7 +8,7 @@
 }
 
 body{
-    background-color: #111;
+    background-color: #080808;
 }
 
 #portada{
@@ -140,7 +140,7 @@ body{
         )
     );
     gap:20px;
-    margin: 15px;
+    margin: 20px;
 }
 .curso-poster{
     width:100%;
@@ -150,7 +150,7 @@ body{
 
 /* CARDS */
 .card{
-    height:250px;
+    height:270px;
     background:#000;
     border-radius:30px;
     overflow:hidden;
@@ -230,7 +230,7 @@ body{
     color: #000;
 } 
 /* Info */
-section{
+#InformacionInicio{
     margin:20px;
     margin-top: 60px;
     margin-bottom: 60px;
@@ -276,6 +276,270 @@ section{
     width: 30rem;
     border-radius: 10%;
     margin:10px;
+    margin-bottom:50px;
     height: 27rem;
     margin-right: 40px;
+}
+
+/* Pagina Cursos - buscador */
+.search{
+    font-size: 18px;
+    min-width:40.62rem;
+    color:#fff;
+    background-position:center center;
+    background-size:cover ;
+    display:flex;
+    align-items: end;
+}
+.contentSearch{
+    margin:0 auto;
+}
+
+#buscador{
+    background-color: rgb(66 66 66);
+    color: #fff;
+    margin-top: 30px;
+    width: 1000px;
+    font-size: 20px;
+    padding: 10px;
+    border-radius: 15px;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+#box-search{
+    position:fixed;
+    top: 165px;
+    width:1000px;
+    display: block;
+    border-radius: 20px;
+    color: black;
+    background-color: white;
+    z-index:80;
+    left:50%;
+    transform: translateX(-50%);
+    overflow:hidden;
+    display:none;
+}
+
+#box-search li a{
+    display:block;
+    width:1000px;
+    color:#777777;
+    padding:12px 20px;
+}
+
+#box-search li a:hover{
+    background-color:#f3f3f3;
+}
+
+/* Pagina de Contacto */
+.content{
+    margin:50px;
+    color: #fff;
+    font-family: 'Quicksand', sans-serif;
+}
+
+.container {
+    max-width: 1170px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1.5em;
+}
+
+.contact-info ul {
+    list-style: none;
+    padding: 0;
+}
+
+.logo {
+    text-align: center;
+    font-size: 3em;
+    color:#ffffff94;
+}
+.contact-wrapper {
+    box-shadow: 0 0 20px 0 rgba(255, 255, 255, .3);
+}
+
+.contact-wrapper > * {
+    padding: 1em;
+}
+
+.contact-form {
+    background: #222222;
+}
+
+.contact-form form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.contact-form form label {
+    display: block;
+}
+
+.contact-form form p {
+    margin: 0;
+    padding: 1em;
+}
+
+.contact-form form .block {
+    grid-column: 1 / 3;
+}
+
+.contact-form form button,
+.contact-form form input,
+.contact-form form textarea {
+    width: 100%;
+    padding: .7em;
+    border: none;
+    background: none;
+    outline: 0;
+    color: #fff;
+    border-bottom: 1px solid #4ad295;
+}
+
+.contact-form form button {
+    background: #4ad295;
+    border: 0;
+    text-transform: uppercase;
+    padding: 1em;
+}
+
+.contact-form form button:hover,
+.contact-form form button:focus {
+    background: transparent;
+    border: 1px solid #4ad295;
+    color: #4ad295;
+    transition: background-color 1s ease-out;
+    outline: 0;
+}
+
+/* CONTACT INFO */
+.contact-info {
+    background: #000;
+}
+
+.contact-info h4, .contact-info ul, .contact-info p {
+    text-align: center;
+    margin: 0 0 1rem 0;
+}
+
+/* LARGE SIZE */
+@media(min-width: 900px) {
+    .contact-wrapper {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+    }
+    .contact-wrapper > * {
+        padding: 2em;
+    }
+    .contact-info h4,
+    .contact-info ul,
+    .contact-info p {
+        text-align: left;
+    }
+}
+
+/* PERFIL */
+
+.portadaPerfil{
+    font-size: 15px;
+    min-width:40.62rem;
+    height:250px;
+    color:#fff;
+    background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50)), url(../Imagenes/fondo1.jpg);
+    background-position:center center;
+    background-size:cover ;
+    margin-bottom: 2.12rem;
+    display:flex;
+    align-items: center;
+}
+.contentCuenta{
+    margin: 0 auto;
+    padding-bottom: 4.253rem;
+}
+#nombreUser{
+    font-weight: 300;
+    font-size:3.12em;
+    font-family: 'Alkalami', serif;
+    text-align: justify;
+    margin-top:1.4em;
+    margin-bottom:-0.2em;
+}
+.btnPerfil{
+    background: rgba(0,0,0,0.5);
+    border: none;
+    border-radius: 0.31em;
+    padding: 0.93em 0.87em;
+    color: #fff;
+    margin-left: 5.25em;
+    cursor: pointer;
+    transition: .3s ease all;
+    font-size: 1.12em
+}
+#btnEditarDatos2{
+    display:none;
+}
+.btnPerfil:hover{
+    background-color:#fff;
+    color:#1d1d1d;
+}
+
+/* Editar Datos Usuario */
+
+#editarDatos{
+    background-color: #d4d4d4;
+    margin:2%;
+    padding:10px;
+    border-radius:5px;
+    display:none;
+}
+
+#editarDatos form{
+    display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 20px;
+}
+
+.formulario__label{
+    display: block;
+    font-weight: 700;
+    padding: 10px;
+    cursor: pointer;
+}
+
+
+.formulario__input {
+	width: 100%;
+	background: #fff;
+	border: 3px solid transparent;
+	border-radius: 3px;
+	height: 45px;
+	line-height: 45px;
+	padding: 0 40px 0 10px;
+	transition: .3s ease all;
+}
+
+.formulario__input:focus {
+	border: 3px solid #4ad295;
+	outline: none;
+	box-shadow: 3px 0px 30px rgba(163,163,163, 0.4);
+}
+
+.formulario__btn {
+	height: 45px;
+	line-height: 45px;
+	width: 30%;
+	background: #000;
+	color: #fff;
+	font-weight: bold;
+	border: none;
+	border-radius: 3px;
+	cursor: pointer;
+	transition: .1s ease all;
+}
+
+.formulario__grupo{
+    position:relative;
 }
