--- a/views/contacto.ejs
+++ b/views/contacto.ejs
@@ -29,10 +29,10 @@
         <div class="contact-wrapper animated bounceInUp">
             <div class="contact-form">
                 <h3>Contáctanos</h3>
-                <form action="">
+                <form action="/contacto" method="POST">
                     <p>
                         <label>Nombre Completo</label>
-                        <input type="text" name="fullname">
+                        <input type="text" name="fullname" >
                     </p>
                     <p>
                         <label>Email</label>
@@ -51,7 +51,7 @@
                         <textarea name="message" rows="3"></textarea>
                     </p>
                     <p class="block">
-                        <button>
+                        <button >
                             Enviar
                         </button>
                     </p>
