--- a/views/head.ejs
+++ b/views/head.ejs
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="Css/login.css">
     <link rel="stylesheet" href="Css/registro.css">
     <link rel="stylesheet" href="Css/footer.css">
+    <link rel="stylesheet" href="Css/error.css">
+    <link rel="stylesheet" href="Css/tablasAdmin.css">
+    
+
     <!-- Icons -->
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
