--- a/views/errorAccess.ejs
+++ b/views/errorAccess.ejs
@@ -25,7 +25,7 @@
         <h1>Necesitas crear una cuenta para poder acceder a esta página.</h1>
         <p>Por favor dirigete a nuestro registro y crear una nueva cuenta para poder seguir accediendo a nuestros servicios.</p>
         <div class="buttons">
-            <button class="btn btn1"><a href="/inicio">Regresar</a></button>
+            <button class="btn btn1"><a href="/">Regresar</a></button>
             <button class="btn btn2"><a href="/registro">Registro</a></button>
         </div>
     </div>
