Cambios de niv_acc realizados y creacion de pestaña entretenimiento

--- a/views/miCuenta.ejs
+++ b/views/miCuenta.ejs
@@ -22,11 +22,8 @@
         <div class="portadaPerfil">
             <div class="contentCuenta">
 
-                <% user.forEach((info) => { %> 
-                        <h1 id="nombreUser"><%= info.nombre %></h1>
-                    <% }) %> 
 
-                
+                <h1 id="nombreUser">Bienvenido</h1>                
                 <button id="btnEditarDatos1" onclick="mostrarForm()" class="btnPerfil">Editar Perfil</button>
                 <button id="btnEditarDatos2" onclick="ocultarForm()" class="btnPerfil">Editar Perfil</button>
             </div>
